--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 :root {
   --main-color: #bc1142;
   --bg-color: #fff;
-  --text-color: #0f0c27;
+  --text-color: #1b1b1b;
   --hover: #75a928;
  
   --big-font: 3.2rem;
@@ -25,7 +25,7 @@ section {
 }
 body.active {
   --text-color: #fff;
-  --bg-color: #0f0c27;
+  --bg-color: #000000;
 }
 body {
   background: var(--bg-color);
